# codeintel

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  go.sum
admin-ui/: README.md  app.js  index.html  server.mjs  styles.css
cmd/codeintel-app/: main.go
cmd/codeintel-backend/: main.go
cmd/codeintel-graph-init/: main.go
deploy/: Dockerfile.go-runtime  Dockerfile.go-runtime.offline  Dockerfile.indexer-rs  Dockerfile.indexer-rs-core  Dockerfile.scip-worker  worker-classes.example.yaml
indexer-rs/: Cargo.toml  build.rs
indexer-rs/src/: ast_extractor.rs  branches.rs  clone.rs  code_graph_model.rs  delta_plan.rs  executor_service.rs  fact_to_snapshot.rs  lib.rs  main.rs  manifest_files.rs  manifest_store.rs  nebula_ngql.rs  proto.rs  queue.rs  scip.rs  worker.rs  zoekt.rs
indexer-rs/tests/: clone.rs
internal/analytics/: analytics.go  analytics_test.go
internal/api/: asynq_connection_syncer.go  asynq_repo_indexer.go  atom_workspaces.go  audit_emit_test.go  audit_helpers.go  backend_scheduler_client.go  chat.go  chat_test.go  connection_syncer.go  connections.go  connections_branches.go  connections_branches_put.go  connections_branches_put_test.go  connections_branches_test.go  connections_delete.go  connections_delete_test.go  connections_patch.go  connections_patch_test.go  connections_post.go  connections_post_test.go  connections_status.go  connections_status_test.go  connections_sync.go  connections_sync_test.go  connections_test.go  errors.go  health.go  mcp.go  mcp_test.go  models.go  models_put.go  models_put_test.go  models_test.go  probes.go  probes_test.go  repo_index_ref.go  repo_indexer.go  repos.go  repos_branches.go  repos_branches_test.go  (+18 more)
internal/asynqsmoke/: smoke_test.go
internal/auth/: apikey.go  apikey_test.go  encrypt.go  encrypt_test.go  hash.go  hash_test.go  middleware.go  middleware_test.go  optional.go  optional_test.go
internal/db/: apikeys.go  apikeys_test.go  atom_workspace.go  chats.go  codeintel_query.go  codeintel_query_test.go  orgs.go  orgs_test.go  pool_alias.go  repo_connections.go  repo_connections_test.go  repos.go  repos_test.go  search_contexts.go  search_repos.go  search_repos_test.go  secret_refs.go  secret_refs_test.go  secrets.go  secrets_test.go
internal/graphreader/: cache.go  nl_context.go  reader.go  reader_test.go
internal/mcp/: ask_codebase.go  backend.go  backend_test.go  chat.go  codegraph_context.go  graph_evidence_cache.go  semantic_tools.go  semantic_tools_test.go
internal/migrate/: migrate.go  migrate_test.go
internal/nebulasmoke/: smoke_test.go
internal/obs/: cors.go  cors_test.go  logger.go  metrics.go  metrics_test.go  ratelimit.go  ratelimit_test.go  recovery.go  recovery_test.go  request_id.go  request_id_test.go
internal/retrievalpolicy/: policy.go  policy_test.go
internal/search/: backend.go  backend_test.go
internal/secretrefs/: secretrefs.go  secretrefs_test.go
pkg/asynqbridge/: asynqbridge.go  asynqbridge_test.go
pkg/asynqueues/: queues.go  queues_test.go
pkg/audit/: audit.go  audit_test.go  grpcemitter.go  grpcemitter_test.go
pkg/connectionsync/: payload.go
pkg/dbpool/: pool.go  pool_test.go
pkg/graphschema/: bootstrap.go  bootstrap_test.go  describe_alter.go  describe_alter_test.go  insert.go  insert_test.go  lookup.go  lookup_test.go  nebula_ngql.go  nebula_ngql_test.go  types.go  value.go  value_test.go
pkg/llmproxy/: client.go  client_test.go  openai.go  types.go
pkg/nebulaclient/: client.go  client_test.go  config.go  config_test.go
pkg/redisclient/: client.go  config.go  config_test.go  policy.go  policy_test.go
pkg/repoindex/: payload.go  payload_test.go
pkg/repoindexstatus/: branches.go  branches_test.go  codegraph.go  codeintel_test.go  scip.go  summary.go  summary_test.go
pkg/repopaths/: paths.go  paths_test.go
pkg/schedulerapi/: schedulerapi.go
tests/integration/: audit_table_parity_test.go  auth_tables_parity_test.go  chat_tables_parity_test.go  codegraph_extended_parity_test.go  codeintel_extended_parity_test.go  connection_sync_e2e_test.go  connection_sync_http_e2e_test.go  connection_sync_multitenant_test.go  connection_sync_multivcs_test.go  connection_sync_polyglot_test.go  connection_sync_roundtrip_test.go  connection_syncer_enqueue_test.go  db_pool_test.go  duplicate_index_job_parity_test.go  enum_parity_test.go  (+25 more)
tools/: healthcheck.sh  product-gate.sh  wait-healthy.sh
(+154 files in other folders)
